--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>Patterns</groupId>
-    <artifactId>com.shylo.patterns</artifactId>
+    <groupId>com.shylo.patterns</groupId>
+    <artifactId>Patterns</artifactId>
     <packaging>jar</packaging>
     <version>0.1</version>
 
